--- a/style.css
+++ b/style.css
@@ -1,22 +1,46 @@
+:root {
+    --red: 28;
+    --green: 150;
+    --blue: 130;
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
-body,
-html {
-    height: 100%;
-}
 
 .container {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
 }
 
 .container div {
-    background-color: blue;
+
     width: 20%;
     height: 100%;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container div:nth-child(1) {
+    background-color: rgb(var(--red), calc(var(--green) - 20), var(--blue));
+}
+
+.container div:nth-child(2) {
+    background-color: rgb(var(--red), calc(var(--green) - 40), var(--blue));
+}
+
+.container div:nth-child(3) {
+    background-color: rgb(var(--red), calc(var(--green) - 60), var(--blue));
+}
+
+.container div:nth-child(4) {
+    background-color: rgb(var(--red), calc(var(--green) - 80), var(--blue));
+}
+
+.container div:nth-child(5) {
+    background-color: rgb(var(--red), calc(var(--green) - 100), var(--blue));
 }
