--- a/style.css
+++ b/style.css
@@ -65,3 +65,49 @@ p {
     -ms-transform: rotate(180deg);
     transform: rotate(180deg);
 }
+
+
+
+.container div:nth-child(1):hover+div:nth-child(2) {
+    background-color: rgb(var(--red), calc(var(--green) - 20), var(--blue));
+}
+
+.container div:nth-child(1):hover~div:nth-child(3) {
+    background-color: rgb(var(--red), calc(var(--green) - 40), var(--blue));
+}
+
+.container div:nth-child(1):hover~div:nth-child(4) {
+    background-color: rgb(var(--red), calc(var(--green) - 60), var(--blue));
+}
+
+.container div:nth-child(1):hover~div:nth-child(5) {
+    background-color: rgb(var(--red), calc(var(--green) - 80), var(--blue));
+}
+
+
+.container div:nth-child(2):hover~div:nth-child(3) {
+    background-color: rgb(var(--red), calc(var(--green) - 40), var(--blue));
+}
+
+.container div:nth-child(2):hover~div:nth-child(4) {
+    background-color: rgb(var(--red), calc(var(--green) - 60), var(--blue));
+}
+
+.container div:nth-child(2):hover~div:nth-child(5) {
+    background-color: rgb(var(--red), calc(var(--green) - 80), var(--blue));
+}
+
+
+
+.container div:nth-child(3):hover~div:nth-child(4) {
+    background-color: rgb(var(--red), calc(var(--green) - 60), var(--blue));
+}
+
+.container div:nth-child(3):hover~div:nth-child(5) {
+    background-color: rgb(var(--red), calc(var(--green) - 80), var(--blue));
+}
+
+
+.container div:nth-child(4):hover~div:nth-child(5) {
+    background-color: rgb(var(--red), calc(var(--green) - 80), var(--blue));
+}
